@@ -1157,6 +1157,8 @@ void buildSpellArray()
 
   discArray[SKILL_ADVANCED_OFFENSE] = new spellInfo(SKILL_GENERAL, DISC_OFFENSE, DISC_OFFENSE, "advanced offense", TASK_NORMAL, LAG_0, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_1, LEARN_1, START_DO_1, LEARN_DO_1, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_UNUSUAL, 0.0, 0, 0);
 
+  discArray[SKILL_INEVITABILITY] = new spellInfo(SKILL_GENERAL, DISC_OFFENSE, DISC_OFFENSE, "inevitability", TASK_NORMAL, LAG_0, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_1, LEARN_1, START_DO_1, LEARN_DO_1, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_UNUSUAL, 0.0, 0, 0);
+
   // disc_wizardry
 
   discArray[SKILL_WIZARDRY] = new spellInfo(SPELL_MAGE, DISC_WIZARDRY, DISC_WIZARDRY, "wizardry", TASK_NORMAL, LAG_0, POSITION_SLEEPING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_1, LEARN_1, START_DO_NO, LEARN_DO_NO, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_UNUSUAL, 0.0, 0, 0);
