@@ -1,3 +1,6 @@
+07-06-20 : New skill in offensive abilities called Inevitability.
+           - Stacking buff that procs on misses and improves hit chance
+
 07-01-20 : New skill in defensive abilities called Toughness. A stacking buff
             that procs when getting hit and provides some immunity to
             non-magic.
